change database connection

--- a/example/spring/liferay-springmvc-sample/src/main/resources/database.properties
+++ b/example/spring/liferay-springmvc-sample/src/main/resources/database.properties
@@ -1,5 +1,5 @@
 # database properties
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/liferay6.2?useUnicode=true&characterEncoding=UTF-8&useFastDateParsing=false
-jdbc.username=root
-jdbc.password=root
+jdbc.url=jdbc:mysql://localhost:3306/liferay?useUnicode=true&characterEncoding=UTF-8&useFastDateParsing=false
+jdbc.username=liferay_user
+jdbc.password=123456
