--- a/DNS/tms/pom.xml
+++ b/DNS/tms/pom.xml
@@ -28,8 +28,8 @@
 				<version>2.5</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -49,15 +49,35 @@
 	<properties>
 		<liferay.version>6.2.5</liferay.version>
 		<liferay.maven.plugin.version>6.2.5</liferay.maven.plugin.version>
-		<jackson-version>1.4.2</jackson-version>
+		<jackson-version>2.4.1</jackson-version>
 
 		<liferay.auto.deploy.dir>D:\Develop\Java\liferay\liferay-portal-6.2-ce-ga6\deploy</liferay.auto.deploy.dir>
 		<liferay.app.server.deploy.dir>D:\Develop\Java\liferay\liferay-portal-6.2-ce-ga6\tomcat-7.0.62\webapps</liferay.app.server.deploy.dir>
 		<liferay.app.server.lib.global.dir>D:\Develop\Java\liferay\liferay-portal-6.2-ce-ga6\tomcat-7.0.62\lib\ext</liferay.app.server.lib.global.dir>
 		<liferay.app.server.portal.dir>D:\Develop\Java\liferay\liferay-portal-6.2-ce-ga6\tomcat-7.0.62\webapps\ROOT</liferay.app.server.portal.dir>
 		
-		<thymeleaf.version>3.0.2.RELEASE</thymeleaf.version>
+		<java.version>1.8</java.version>
+		<portlet-api.version>2.0</portlet-api.version>
+		<servlet-api.version>2.5</servlet-api.version>
+		<jsp-api.version>2.2</jsp-api.version>
+		<jstl.version>1.2</jstl.version>
+
+		<org.springframework-version>4.1.5.RELEASE</org.springframework-version>
+		<spring.version>4.2.1.RELEASE</spring.version>
 	</properties>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>io.spring.platform</groupId>
+				<artifactId>platform-bom</artifactId>
+				<version>1.1.3.RELEASE</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<profiles>
 		<profile>
 			<id>thanghv</id>
