make stable for function check device warranty using datatables

--- a/DNS/tms/tms-portlet/src/main/java/content/Language.properties
+++ b/DNS/tms/tms-portlet/src/main/java/content/Language.properties
@@ -4,6 +4,10 @@ label.email=Email
 label.telephone=Telephone
 label.addcontact=Add Contact
 
+label.modelName=Model Name
+label.serialNumber=Serial Number
+label.macAddress=MAC Address
+
 label.menu=Menu
 label.title=Contact Manager
 label.footer=&copy; ViralPatel.net
