--- a/DNS/tms/tms-portlet/pom.xml
+++ b/DNS/tms/tms-portlet/pom.xml
@@ -127,6 +127,11 @@
 			<artifactId>gson</artifactId>
 		</dependency>
 		
+		<dependency>
+		   <groupId>commons-fileupload</groupId>
+		   <artifactId>commons-fileupload</artifactId>
+		</dependency>
+		
 		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
