Change code missing function: Show Warranty status.

--- a/DNS/tms/tms-portlet/src/main/resources/content/Language.properties
+++ b/DNS/tms/tms-portlet/src/main/resources/content/Language.properties
@@ -7,6 +7,9 @@ label.addcontact=Add Contact
 label.modelName=Model Name
 label.serialNumber=Serial Number
 label.macAddress=MAC Address
+label.factoryOut=Factory Out
+label.warrantyStartDate=Warranty Start Date
+label.warrantyEndDate=Warranty End Date
 
 label.menu=Menu
 label.title=Contact Manager
