Change hibernate dialect to use DB from outside.

--- a/example/spring/liferay-springmvc-sample/src/main/resources/database.properties
+++ b/example/spring/liferay-springmvc-sample/src/main/resources/database.properties
@@ -1,5 +1,5 @@
 # database properties
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/liferay?useUnicode=true&characterEncoding=UTF-8&useFastDateParsing=false
+jdbc.url=jdbc:mysql://10.72.0.106:3306/liferay?useUnicode=true&characterEncoding=UTF-8&useFastDateParsing=false
 jdbc.username=liferay_user
 jdbc.password=123456
