--- a/DNS/20161120/tms/tms-portlet/src/main/webapp/WEB-INF/sql/indexes.properties
+++ b/DNS/20161120/tms/tms-portlet/src/main/webapp/WEB-INF/sql/indexes.properties
@@ -23,6 +23,7 @@ IX_BD654D4=tms_RmaRequest.CompanyId
 IX_C411893C=tms_RmaRequest.G_S
 IX_A2D60056=tms_RmaRequest.GroupId
 IX_A963951A=tms_RmaRequest.RmaRequestNumber
+IX_E3178DBA=tms_RmaRequest.Status
 IX_7B3A304A=tms_RmaRequest.UUID_G
 IX_6AFBB060=tms_RmaRequest.Uuid
 IX_5BEE57C8=tms_RmaRequest.Uuid_C
